...
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M2_P1"
                style="@style/SuveyQuestionTitle"/>

            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                style="@style/SurveyQuestionEdit"
                android:completionThreshold="1"/>
...
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M2_P2"
                style="@style/SuveyQuestionTitle"/>

            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                style="@style/SurveyQuestionEdit"/>
        </LinearLayout>
...
