<resources>
    <string name="app_name">Aena EMMA</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_newSurvey">Nueva encuesta</string>
    <string name="surveyslist_language_text">Idioma</string>
    <string name="surveyslist_codEncuestador_text">Cod. de Encuestador</string>
    <string name="surveyslist_edit_codEncuestador_hint">XX</string>
    <string name="surveyslist_aeropuerto_text">Aeropuerto</string>
    <string name="surveyslist_edit_aeropuerto_hint">Aeropuerto</string>
    <string name="survey_sitemainformacion_text">Sistema de Información</string>
...
